# bb-browser

./: package.json  pnpm-lock.yaml  tsup.config.ts
sites/joinquant/: backtest-error.js  backtest-list.js  backtest-log.js  backtest-result.js  backtest-stats.js  backtest-status.js  backtest.js  build.js  cancel.js  export.js  me.js  new.js  save.js  statistics.js  strategies.js  strategy.js
skills/pconline/: SKILL.md
tools/pconline/: pconline  pconline.cmd
tools/zol-scraper/: pyproject.toml
tools/zol-scraper/zol_scraper/: __init__.py  cache.py  cli.py  consts.py  filters.py  listing.py  models.py  scraper.py  specs.py
web/: view.html
